--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fine-weather-gallery.ico" />
+    <link rel="icon" type="image/svg+xml" href="/login.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>一些晴朗的日子</title>
-    <script src="https://kit.fontawesome.com/0296f86aff.js" crossorigin="anonymous"></script>
+    <title>大梦服饰店</title>
+    <script type="module" src="public/kit.js"></script>
+    <!--    <script src="https://kit.fontawesome.com/0296f86aff.js" crossorigin="anonymous"></script>-->
   </head>
   <body>
     <div id="app"></div>
